升级到JDK21,SpringBoot3.1.8,SpringCloud2022.0.5