@@ -2,9 +2,11 @@ package com.ruoyi.common.core.utils.file;
 
 import java.io.ByteArrayInputStream;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.Arrays;
+
 import org.apache.poi.util.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -14,70 +16,53 @@ import org.slf4j.LoggerFactory;
  *
  * @author ruoyi
  */
-public class ImageUtils
-{
+public class ImageUtils {
     private static final Logger log = LoggerFactory.getLogger(ImageUtils.class);
 
-    public static byte[] getImage(String imagePath)
-    {
+    public static byte[] getImage(String imagePath) {
         InputStream is = getFile(imagePath);
-        try
-        {
+        try {
             return IOUtils.toByteArray(is);
-        }
-        catch (Exception e)
-        {
-            log.error("图片加载异常 {}", e);
+        } catch (Exception e) {
+            log.error("图片加载异常", e);
             return null;
-        }
-        finally
-        {
+        } finally {
             IOUtils.closeQuietly(is);
         }
     }
 
-    public static InputStream getFile(String imagePath)
-    {
-        try
-        {
+    public static InputStream getFile(String imagePath) {
+        try {
             byte[] result = readFile(imagePath);
             result = Arrays.copyOf(result, result.length);
             return new ByteArrayInputStream(result);
-        }
-        catch (Exception e)
-        {
-            log.error("获取图片异常 {}", e);
+        } catch (Exception e) {
+            log.error("获取图片异常", e);
         }
         return null;
     }
 
     /**
      * 读取文件为字节数据
-     * 
+     *
      * @param url 地址
      * @return 字节数据
      */
-    public static byte[] readFile(String url)
-    {
+    public static byte[] readFile(String url) {
         InputStream in = null;
-        try
-        {
+        try {
             // 网络地址
-            URL urlObj = new URL(url);
+            URL urlObj = URI.create(url).toURL();
             URLConnection urlConnection = urlObj.openConnection();
             urlConnection.setConnectTimeout(30 * 1000);
             urlConnection.setReadTimeout(60 * 1000);
             urlConnection.setDoInput(true);
             in = urlConnection.getInputStream();
             return IOUtils.toByteArray(in);
-        }
-        catch (Exception e)
-        {
-            log.error("访问文件异常 {}", e);
+        } catch (Exception e) {
+            log.error("访问文件异常", e);
             return null;
-        }
-        finally
-        {
+        } finally {
             IOUtils.closeQuietly(in);
         }
     }
